a11y color contrast fix3 for restaurant.html

--- a/css/styles_fix.css
+++ b/css/styles_fix.css
@@ -31,10 +31,7 @@
 }
 .leaflet-container a,
 #breadcrumb li a {
-    color: rgba(0, 115, 173, 1);
-}
-#restaurant-container h2{
-    color: #444;
+    color: rgba(0, 115, 165, 1);
 }
 /* **************************** */
 
